// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Records & Tuples > arrays and dictionaries 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = 2;
  const v2 = 3;
  const v3 = {
    0: v0,
    1: v1,
    2: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Array [ 0: 1, 1: 2, 2: 3 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"array"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Array"}}
[5] row:ext {"label":"0"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":1}}
[7] row:ext {"label":"1"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":2}}
[9] row:ext {"label":"2"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Num","value":3}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = 2
      let v2 = 3
      let v3 = alloc { 0: v0, 1: v1, 2: v2 }
      return v3",
    "name": "array",
    "normalized": "Array [ 0: 1, 1: 2, 2: 3 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "FFI.Indexed Num Num @FFI.defaultArray",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 3;
  const v1 = 2;
  const v2 = 1;
  const v3 = {
    three: v0,
    two: v1,
    one: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ three: 3, two: 2, one: 1 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"dict"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"three"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":3}}
[7] row:ext {"label":"two"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":2}}
[9] row:ext {"label":"one"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Num","value":1}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 3
      let v1 = 2
      let v2 = 1
      let v3 = alloc { three: v0, two: v1, one: v2 }
      return v3",
    "name": "dict",
    "normalized": "Struct [ three: 3, two: 2, one: 1 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "FFI.Indexed String Num @FFI.defaultHashMap",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Records & Tuples > field access 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 10;
  const v1 = 20;
  const v2 = {
    x: v0,
    y: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ x: 10, y: 20 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"point"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"x"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":10}}
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":20}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 10
      let v1 = 20
      let v2 = alloc { x: v0, y: v1 }
      return v2",
    "name": "point",
    "normalized": "Struct [ x: 10, y: 20 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ x: Num, y: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = point;
  const v1 = v0.x;
  return v1;
}
return main();
",
    "elaborated": "(point).x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"xCoord"}
[3] proj {"label":"x"}
  :target -> [5]
[4] var:free {"name":"point"}
[5] var:ref {"name":"point"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = point
      let v1 = read v0.x
      return v1",
    "name": "xCoord",
    "normalized": "10",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, p1) {
  const v0 = p1.x;
  return v0;
}
return main();
",
    "elaborated": "λ(p: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) -> (p).x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getX"}
[3] lambda {"variable":"p","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [17]
  :env -> [19]
[4] sigma {"variable":"$sig","level":1}
  :annotation -> [5]
  :body -> [10]
[5] row:ext {"label":"y"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"y"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:ext {"label":"x"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] row:empty
[17] proj {"label":"x"}
  :target -> [18]
[18] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[19] env
[20] closure
  :body -> [3]
  :env -> [19]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, p1) entry=entry
    entry:
      let v0 = read p1.x
      return v0",
    "name": "getX",
    "normalized": "λ(p: Σ($sig: [ y: Num, x: Num ]) . (closure: Schema [ y: Num, x: Num ] -| ·)) ->
  (closure: (p).x -| Γ: p)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) -> Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Records & Tuples > field extension 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 10;
  const v1 = {
    x: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ x: 10 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"point"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"x"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":10}}
[7] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 10
      let v1 = alloc { x: v0 }
      return v1",
    "name": "point",
    "normalized": "Struct [ x: 10 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ x: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 30;
  const v1 = 20;
  const v2 = point;
  const v3 = {
    ...v2,
    y: v1
  };
  const v4 = {
    ...v3,
    z: v0
  };
  return v4;
}
return main();
",
    "elaborated": "{ { point | y = 20 } | z = 30 }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"point3d"}
[3] inj {"label":"z"}
  :target -> [5]
  :value -> [4]
[4] lit {"value":{"type":"Num","value":30}}
[5] inj {"label":"y"}
  :target -> [8]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":20}}
[7] var:free {"name":"point"}
[8] var:ref {"name":"point"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 30
      let v1 = 20
      let v2 = point
      let v3 = update-immutable v2 { y: v1 }
      let v4 = update-immutable v3 { z: v0 }
      return v4",
    "name": "point3d",
    "normalized": "Struct [ x: 10, y: 20, z: 30 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ z: Num, y: Num, x: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 100;
  const v1 = point;
  const v2 = {
    ...v1,
    x: v0
  };
  return v2;
}
return main();
",
    "elaborated": "{ point | x = 100 }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"updated"}
[3] inj {"label":"x"}
  :target -> [6]
  :value -> [4]
[4] lit {"value":{"type":"Num","value":100}}
[5] var:free {"name":"point"}
[6] var:ref {"name":"point"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 100
      let v1 = point
      let v2 = update-immutable v1 { x: v0 }
      return v2",
    "name": "updated",
    "normalized": "Struct [ x: 100 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ x: Num ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Records & Tuples > records 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 10;
  const v1 = 0;
  const v2 = {
    y: v0,
    x: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ y: 10, x: 0 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"point"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"y"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":10}}
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":0}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 10
      let v1 = 0
      let v2 = alloc { y: v0, x: v1 }
      return v2",
    "name": "point",
    "normalized": "Struct [ y: 10, x: 0 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 30;
  const v1 = "Alice";
  const v2 = {
    age: v0,
    name: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ age: 30, name: "Alice" ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"person"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"age"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":30}}
[7] row:ext {"label":"name"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"String","value":"Alice"}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 30
      let v1 = "Alice"
      let v2 = alloc { age: v0, name: v1 }
      return v2",
    "name": "person",
    "normalized": "Struct [ age: 30, name: "Alice" ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Σ($sig: [ age: Num, name: String ]) . Schema [ age: Num, name: String ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Records & Tuples > self-referencing fields 1`] = `
[
  {
    "error": "Unbound label: width",
    "kind": "let",
    "name": "rectangle",
  },
]
`;

exports[`Language Tour — Records & Tuples > tuples 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 42;
  const v1 = "answer";
  const v2 = {
    0: v0,
    1: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ 0: 42, 1: "answer" ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"pair"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"0"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":42}}
[7] row:ext {"label":"1"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"String","value":"answer"}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      let v1 = "answer"
      let v2 = alloc { 0: v0, 1: v1 }
      return v2",
    "name": "pair",
    "normalized": "Struct [ 0: 42, 1: "answer" ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ 1: String, 0: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "answer";
  const v1 = 42;
  const v2 = {
    1: v0,
    0: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ 1: "answer", 0: 42 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"pairExplicit"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"1"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"String","value":"answer"}}
[7] row:ext {"label":"0"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":42}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = "answer"
      let v1 = 42
      let v2 = alloc { 1: v0, 0: v1 }
      return v2",
    "name": "pairExplicit",
    "normalized": "Struct [ 1: "answer", 0: 42 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Σ($sig: [ 1: String, 0: Num ]) . Schema [ 1: String, 0: Num ]",
    "validity": "valid",
  },
]
`;
